--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -47,32 +47,13 @@
                 app:layout_constraintStart_toStartOf="@+id/cat_txt_wel"
                 app:layout_constraintTop_toBottomOf="@+id/cat_usr_img" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:id="@+id/box_search_input"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cat_txt_wel">
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:background="#E6E6E6"
-                    app:circularflow_radiusInDP="100dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/box_search_input">
+                app:layout_constraintTop_toBottomOf="@id/cat_usr_img"
+                android:padding="20dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraintLayout"
