--- a/app/src/main/res/layout/fragment_recipies.xml
+++ b/app/src/main/res/layout/fragment_recipies.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="80dp"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.view.RecipiesFragment">
 
@@ -12,23 +13,100 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search_view"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:queryHint="Search Recipes"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/search_view_background"
+            app:queryHint="Search Recipies"
+            />
+
         <TextView
             android:id="@+id/txt_filter"
+            style="@style/Text_base"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Filtered by: "
-            style="@style/Text_base"
             android:layout_marginStart="20dp"
-            android:layout_marginBottom="10dp"
-            app:layout_constraintBottom_toTopOf="@+id/recipies_recycler"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:text="Filtered by: "
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/search_view" />
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmer_view_container"
+            android:layout_marginTop="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@+id/search_view"
+            app:shimmer_auto_start="true">
+
+            <!-- Bloques de shimmer (ejemplo) que simulan las celdas del RecyclerView -->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="20dp">
+
+                <!-- Imagen de la receta con shimmer -->
+                <View
+                    android:id="@+id/img_food_shimmer"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:background="#6C6C6C"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:layout_editor_absoluteX="20dp" />
+
+                <!-- Layout de los textos con shimmer -->
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:background="#C8C8C8"
+                    android:padding="10dp"
+                    app:layout_constraintTop_toBottomOf="@id/img_food_shimmer">
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="250dp"
+                android:padding="20dp">
+
+                <!-- Imagen de la receta con shimmer -->
+                <View
+                    android:id="@+id/img_food_shimmer2"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:background="#6C6C6C"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:layout_editor_absoluteX="20dp" />
+
+                <!-- Layout de los textos con shimmer -->
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:background="#C8C8C8"
+                    android:padding="10dp"
+                    app:layout_constraintTop_toBottomOf="@id/img_food_shimmer2">
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginTop="100dp"
             android:id="@+id/recipies_recycler"
-            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
 
         <androidx.cardview.widget.CardView
             android:id="@+id/btnAdd"
