--- a/app/src/main/res/layout/recipie_item.xml
+++ b/app/src/main/res/layout/recipie_item.xml
@@ -18,7 +18,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="@color/white"
+        android:background="@drawable/recipie_view_background"
         app:layout_constraintTop_toBottomOf="@+id/img_food"
         tools:layout_editor_absoluteX="20dp">
 
